[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Scenes/SoundFX.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sounds/SoundFX/bullet_sound_1.ogg" type="AudioStream" id=2]
[ext_resource path="res://Assets/Sounds/SoundFX/bullet_sound_2.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sounds/SoundFX/bullet_sound_3.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/SoundFX/pain_sound_1.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sounds/SoundFX/pain_sound_2.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sounds/SoundFX/pain_sound_3.ogg" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sounds/SoundFX/portal_idle_sound.ogg" type="AudioStream" id=8]
[ext_resource path="res://Assets/Sounds/SoundFX/EnergyFlow.ogg" type="AudioStream" id=9]
[ext_resource path="res://Assets/Sounds/SoundFX/GateOpen.ogg" type="AudioStream" id=10]
[ext_resource path="res://Assets/Sounds/SoundFX/GateClose.ogg" type="AudioStream" id=11]
[ext_resource path="res://Assets/Sounds/SoundFX/GateInteract.ogg" type="AudioStream" id=12]

[node name="SoundFX" type="Node2D"]
script = ExtResource( 1 )

[node name="Shot1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="Shot2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Shot3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Pain1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Pain2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="Pain3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="PortalIdle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = 16.0
max_distance = 250.0

[node name="EnergyFlow" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0
pitch_scale = 32.0

[node name="GateOpen" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = -10.0

[node name="GateClose" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = -5.0

[node name="GateInteract" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
volume_db = -5.0
pitch_scale = 2.0
[connection signal="finished" from="Shot1" to="." method="_on_Shot1_finished"]
[connection signal="finished" from="Shot2" to="." method="_on_Shot1_finished"]
[connection signal="finished" from="Shot3" to="." method="_on_Shot1_finished"]
[connection signal="finished" from="Pain1" to="." method="_on_Shot1_finished"]
[connection signal="finished" from="Pain2" to="." method="_on_Shot1_finished"]
[connection signal="finished" from="Pain3" to="." method="_on_Shot1_finished"]
